force-app/main/default/objects/Issue__c/fields/IssueCost__c.field-meta.xml
<CustomField>
    <fullName>IssueCost__c</fullName>
    <label>Issue Cost</label>
    <summarizedField>Worklog__c.WorklogCost__c</summarizedField>
    <summaryForeignKey>Worklog__c.Issue__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>