force-app/main/default/objects/Issue__c/fields/IssueCostApp__c.field-meta.xml
<CustomField>
    <fullName>IssueCostApp__c</fullName>
    <label>IssueCostApp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>