force-app/main/default/objects/Issue__c/fields/IssueType__c.field-meta.xml
<CustomField>
    <fullName>IssueType__c</fullName>
    <description>tipo issue</description>
    <label>Issue Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>