force-app/main/default/objects/Issue__c/fields/JiraId__c.field-meta.xml
<CustomField>
    <fullName>JiraId__c</fullName>
    <description>Jira Id</description>
    <externalId>true</externalId>
    <label>Jira Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>