force-app/main/default/objects/Issue__c/fields/JiraProject__c.field-meta.xml
<CustomField>
    <fullName>JiraProject__c</fullName>
    <label>Jira Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>