force-app/main/default/objects/Issue__c/fields/LastUpdatedJira__c.field-meta.xml
<CustomField>
    <fullName>LastUpdatedJira__c</fullName>
    <description>ultimo aggiornamento jira</description>
    <label>Last Updated Jira</label>
    <type>DateTime</type>
</CustomField>