force-app/main/default/objects/Issue__c/fields/Original_Estimate_g__c.field-meta.xml
<CustomField>
    <fullName>Original_Estimate_g__c</fullName>
    <formula>OriginalEstimate__c /28800</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Estimate (gg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>