force-app/main/default/objects/Issue__c/fields/TimeSpendHour__c.field-meta.xml
<CustomField>
    <fullName>TimeSpendHour__c</fullName>
    <description>tempo speso in ore</description>
    <label>Time Spend Hour</label>
    <summarizedField>Worklog__c.TimeHour__c</summarizedField>
    <summaryForeignKey>Worklog__c.Issue__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>