force-app/main/default/objects/Issue__c/fields/TimeSpentDays__c.field-meta.xml
<CustomField>
    <fullName>TimeSpentDays__c</fullName>
    <formula>TimeSpendHour__c/8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Spent (gg)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>