force-app/main/default/objects/Issue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Project__c</columns>
    <columns>IssueCostApp__c</columns>
    <columns>TimeSpendHour__c</columns>
    <columns>LastUpdatedJira__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LastUpdatedJira__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>